--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
        <div class="container">
            <nav>
             <a href="index.html" class="logo"><span>L</span>esedi.</a>
-            <ul>
+            <ul id="sidemenu">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contacts</a></li>
+                <img src="Images/cancel (1).PNG" alt="" class="fas" onclick="closemenu()">
             </ul>
+            <img src="Images/menu (2).jpg" alt="" class="fas" onclick="openmenu()">
            </nav>
              <div class="header-text">
                 <p>Web Developer</p>
@@ -69,8 +71,61 @@
              </div>
         </div>
       </div>
-    </div>
+       
+      <div id="portfolio">
+           <div class="container">
+              <h1 class="sub-title">My Projects</h1>
+              <div class="work-list">
+                  <div class="work">
+                      <a href=""><img src="Images/IMG_6957.PNG" alt=""></a>
+                      <div class="layer">
+                        <h4>To-Do List</h4> 
+                        <p>It's a website of a schedule where you can write what you want to do at a specific time. </p>
+                      </div>
+                  </div>
+                  <div class="work">
+                     <a href=""><img src="Images/IMG_6956.PNG" alt=""></a>
+                     <div class="layer">  
+                       <h4>Notes</h4>
+                       <p>A notes site where you can store notes and delete when you no longer need.</p>
+                    </div>
+                   </div>
+                  <div class="work">
+                      <a href=""><img src="Images/IMG_6958.PNG" alt=""></a>
+                      <div class="layer">
+                        <h4>Color Flipper</h4>
+                        <p>A colour flipper where i was trying to apply Javascript</p>
+                    </div>
+                  </div>
+              </div>
+           </div>
+      </div>
 
-   
+      <div id="contact">
+          <div class="container">
+             <div class="row">
+                 <div class="contact-left">
+                    <h1 class="sub-title">Contact Me</h1>
+                    <p><img src="Images/IMG_6953.PNG" alt="" class="email">lesedisebetola@gmail.com</p>
+                    <p><img src="Images/IMG_6952.JPG" alt="">063 801 0078</p>
+                     <div class="social-icons">
+                        <a href=""><img src="Images/linkedin.png" alt=""></a>
+                        <a href=""><img src="Images/IMG_6954.PNG" alt="" class="github"></a>
+                        <a href=""><img src="Images/blog.png" alt="" class="blog"></a>
+                     </div>
+                     <button class="btn">MY RESUME</button>
+                 </div>
+                 <div class="contact-right">
+
+                 </div>
+             </div>
+          </div>
+      </div>
+
+      <div class="copyright">
+          <p>Copyright (c) Lesedi Sebetola</p>
+      </div>
+    </div>
+    <script src="index.js"></script>
 </body>
 </html>
