--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
            <nav>
             <a href="index.html" class="logo"><span>L</span>esedi.</a>
             <ul id="sidemenu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
                 <img src="Images/cancel (1).PNG" alt="" class="fas" onclick="closemenu()">
             </ul>
             <img src="Images/menu (2).jpg" alt="" class="fas" onclick="openmenu()">
@@ -77,24 +76,24 @@
               <h1 class="sub-title">My Projects</h1>
               <div class="work-list">
                   <div class="work">
-                      <a href=""><img src="Images/IMG_6957.PNG" alt=""></a>
+                      <img src="Images/notes.PNG" alt="">
                       <div class="layer">
                         <h4>To-Do List</h4> 
-                        <p>It's a website of a schedule where you can write what you want to do at a specific time. </p>
+                        <p><a href="https://lesedisebetola@github.io/to-do-list/">Click Here!</a></p>
                       </div>
                   </div>
                   <div class="work">
-                     <a href=""><img src="Images/IMG_6956.PNG" alt=""></a>
+                     <a href=""><img src="Images/notes.PNG" alt=""></a>
                      <div class="layer">  
                        <h4>Notes</h4>
-                       <p>A notes site where you can store notes and delete when you no longer need.</p>
+                       <p><a href="https//lesedisebetola@github.io/notes-app/">Click Here!</a></p>
                     </div>
                    </div>
                   <div class="work">
-                      <a href=""><img src="Images/IMG_6958.PNG" alt=""></a>
+                      <a href=""><img src="Images/calculator.PNG" alt=""></a>
                       <div class="layer">
-                        <h4>Color Flipper</h4>
-                        <p>A colour flipper where i was trying to apply Javascript</p>
+                        <h4>Calculator</h4>
+                        <p><a href="https//lesedisebetola@github.io/calculator/">Click Here!</a></p>
                     </div>
                   </div>
               </div>
@@ -103,17 +102,17 @@
 
       <div id="contact">
           <div class="container">
+            <a href="contacts.html"></a>
              <div class="row">
                  <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
                     <p><img src="Images/IMG_6953.PNG" alt="" class="email">lesedisebetola@gmail.com</p>
                     <p><img src="Images/IMG_6952.JPG" alt="">063 801 0078</p>
                      <div class="social-icons">
-                        <a href=""><img src="Images/linkedin.png" alt=""></a>
-                        <a href=""><img src="Images/IMG_6954.PNG" alt="" class="github"></a>
-                        <a href=""><img src="Images/blog.png" alt="" class="blog"></a>
+                        <a href="in/lesedi-sebetola-8b21b5125"><img src="Images/linkedin.png" alt=""></a>
+                        <a href="https:github.com/LesediSebetola"><img src="Images/IMG_6954.PNG" alt="" class="github"></a>
+                        <a href="https://hasnode.com/@LesDee"><img src="Images/blog.png" alt="" class="blog"></a>
                      </div>
-                     <button class="btn">MY RESUME</button>
                  </div>
                  <div class="contact-right">
 
