--- a/index.html
+++ b/index.html
@@ -79,21 +79,21 @@
                       <img src="Images/notes.PNG" alt="">
                       <div class="layer">
                         <h4>To-Do List</h4> 
-                        <p><a href="https://lesedisebetola@github.io/to-do-list/">Click Here!</a></p>
+                        <p>A schedule app where you can add lists on what you want to do when.</p>
                       </div>
                   </div>
                   <div class="work">
                      <a href=""><img src="Images/notes.PNG" alt=""></a>
                      <div class="layer">  
                        <h4>Notes</h4>
-                       <p><a href="https//lesedisebetola@github.io/notes-app/">Click Here!</a></p>
+                       <p>Make notes as many as you want and delete when you want.</p>
                     </div>
                    </div>
                   <div class="work">
                       <a href=""><img src="Images/calculator.PNG" alt=""></a>
                       <div class="layer">
                         <h4>Calculator</h4>
-                        <p><a href="https//lesedisebetola@github.io/calculator/">Click Here!</a></p>
+                        <p>Its a calculator that can be used to add, subruct,devide and multiply numbers.</p>
                     </div>
                   </div>
               </div>
