--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                     <p><img src="Images/IMG_6953.PNG" alt="" class="email">lesedisebetola@gmail.com</p>
                     <p><img src="Images/IMG_6952.JPG" alt="">063 801 0078</p>
                      <div class="social-icons">
-                        <a href="in/lesedi-sebetola-8b21b5125"><img src="Images/linkedin.png" alt=""></a>
-                        <a href="https:github.com/LesediSebetola"><img src="Images/IMG_6954.PNG" alt="" class="github"></a>
+                        <a href="https://linkedin.com/in/lesedi-sebetola-8b21b5125"><img src="Images/linkedin.png" alt=""></a>
+                        <a href="https://github.com/LesediSebetola"><img src="Images/IMG_6954.PNG" alt="" class="github"></a>
                         <a href="https://hasnode.com/@LesDee"><img src="Images/blog.png" alt="" class="blog"></a>
                      </div>
                  </div>
