--- a/index.html
+++ b/index.html
@@ -97,21 +97,21 @@
         <div class="laya">
              <img src="Images/BankIT.PNG" alt="">
              <h1>BankIT</h1>
-             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium debitis obcaecati labore. In aspernatur, quidem soluta saepe repellendus blanditiis ipsum.</p>
+             <p>Welcome to our secure online banking platform! Our site has been carefully designed using HTML and CSS to show a seamless and user-friendly experience.</p>
              <button href="https://github.com/LesediSebetola/BankIT" class="hub-btn">GitHub</button>
              <button href="https://lesedisebetola.github.io/BankIT/" class="btn">View Site</button>
         </div>
         <div class="laya">
           <img src="Images/calculator.PNG" alt="">
           <h1>Calculator</h1>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium debitis obcaecati labore. In aspernatur, quidem soluta saepe repellendus blanditiis ipsum.</p>
+          <p>Introducing my functional calculator, built using HTML, CSS and JavaScript. This calculator was designed for quick accurate calculation.</p>
           <button href="https://github.com/LesediSebetola/calculator" class="hub-btn">GitHub</button>
           <button href="https://lesedisebetola.github.io/calculator/" class="btn">View Site</button>
         </div>
         <div class="laya">
           <img src="Images/ToDo list.PNG" alt="">
           <h1>ToDo list</h1>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium debitis obcaecati labore. In aspernatur, quidem soluta saepe repellendus blanditiis ipsum.</p>
+          <p>A to-do list crafted with HTML, CSS and JavaScript to deliver refined task management solutions. Makes effortless to organise tasks.</p>
           <button href="https://github.com/LesediSebetola/to-do-list" class="hub-btn">GitHub</button>
           <button href="https://lesedisebetola.github.io/to-do-list/" class="btn">View Site</button>
         </div>
