--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p>Web Developer</p>
                 <h1>Hi! I'm <span>Lesedi Sebetola</span></h1>
              </div>
-             <button class="btn" src="" download>Download CV</button>
+             <button class="btn" src="Images/LESEDI SEBETOLA.pdf" download>Download CV</button>
        </div>
      </div>
 
@@ -96,17 +96,17 @@
     
         <div class="laya">
              <img src="Images/BankIT.PNG" alt="">
-             <h1>BankIT</h1>
-             <p>Welcome to our secure online banking platform! Our site has been carefully designed using HTML and CSS to show a seamless and user-friendly experience.</p>
-             <a href="https://github.com/LesediSebetola/BankIT" class="hub-btn">GitHub</a>
-             <a href="https://lesedisebetola.github.io/BankIT/" class="btn">View Site</a>
+             <h1>BankIT-React</h1>
+             <p>I have constructed and enhanced a professional landing page of a bank website, using React to create a seamless and responsive experience for potential customers.</p>
+             <a href="https://github.com/LesediSebetola/BankIT-React" class="hub-btn">GitHub</a>
+             <a href="https://lesedisebetola.github.io/BankIT-React/" class="btn">View Site</a>
         </div>
         <div class="laya">
-          <img src="Images/calculator.PNG" alt="">
-          <h1>Calculator</h1>
-          <p>Introducing my functional calculator, built using HTML, CSS and JavaScript. This calculator was designed for quick accurate calculation.</p>
-          <a href="https://github.com/LesediSebetola/calculator" class="hub-btn">GitHub</a>
-          <a href="https://lesedisebetola.github.io/calculator/" class="btn">View Site</a>
+          <img src="Images/Capture.PNG" alt="">
+          <h1>Orphanage-React</h1>
+          <p>I have successfully designed and developed and orphanage website using React library to ensure visually appealing and user-friendly interface, showcasing key information and engaging content for visitors.</p>
+          <a href="https://github.com/LesediSebetola/Orphanage-React" class="hub-btn">GitHub</a>
+          <a href="https://lesedisebetola.github.io/Orphanage-React/" class="btn">View Site</a>
         </div>
         <div class="laya">
           <img src="Images/ToDo list.PNG" alt="">
